<resources>
    <string name="help">Help</string>
    <string name="show_all_menus">Show all menus</string>
    <string name="network_participation">Network Participation</string>
    <string name="start_stop">Start/Stop</string>
    <string name="start_cm">Start CM</string>
    <string name="terminate_cm">Terminate CM</string>
    <string name="connection">Connection</string>
    <string name="connect_default_server">Connect to Default Server</string>
    <string name="disconnect_default_server">Disconnect from Default Server</string>
    <string name="connect_desig_server">Connect to Designated Server</string>
    <string name="disconnect_desig_server">Disconnect from Designated Server</string>
    <string name="login_logout">Login/Logout</string>
    <string name="login_default_server">Login to Default Server</string>
    <string name="sync_login_default_server">Synchronously Login to Default Server</string>
    <string name="logout_default_server">Logout from Default Server</string>
    <string name="login_desig_server">Login to Designated Server</string>
    <string name="logout_desig_server">Logout from Designated Server</string>
    <string name="session_group">Session/Group</string>
    <string name="req_session_info_default_server">Request Session Information from Default Server</string>
    <string name="sync_req_session_info_default_server">Synchronously Request Session Information from Default Server</string>
    <string name="join_session_default_server">Join Session of Default Server</string>
    <string name="sync_join_session_default_server">Synchronously Join Session of Default Server</string>
    <string name="leave_session_default_server">Leave Session of Default Server</string>
    <string name="change_group_default_server">Change Group of Default Server</string>
    <string name="req_session_info_desig_server">Request Session Information from Designated Server</string>
    <string name="join_session_desig_server">Join Session of Designated Server</string>
    <string name="leave_session_desig_server">Leave Session of Designated Server</string>
    <string name="services">Services</string>
    <string name="event_transmission">Event Transmission</string>
    <string name="chat">chat</string>
    <string name="multicast_chat_cur_group">Multicast Chat in Current Group</string>
    <string name="test_dummy_event">Test CMDummyEvent</string>
    <string name="test_user_event">Test CMUserEvent</string>
    <string name="test_datagram">Test Datagram Event</string>
    <string name="test_user_pos">Test User Position</string>
    <string name="test_sendrecv">Test sendrecv</string>
    <string name="test_castrecv">Test castrecv</string>
    <string name="test_async_sendrecv">Test Asynchronous sendrecv</string>
    <string name="test_async_castrecv">Test Asynchronous castrecv</string>
    <string name="info">Information</string>
    <string name="show_group_info_default_server">Show Group Information of Default Server</string>
    <string name="show_cur_user_stat">Show Current User Status</string>
    <string name="show_cur_channels">Show Current Channels</string>
    <string name="show_group_info_desig_server">Show Group Information of Designated Server</string>
    <string name="measure_input_throughput">Measure Input Network Throughput</string>
    <string name="measure_output_throughput">Measure Output Network Throughput</string>
    <string name="show_all_config">Show All Configurations</string>
    <string name="change_config">Change Configuration</string>
    <string name="channel">Channel</string>
    <string name="add_channel">Add Channel</string>
    <string name="remove_channel">Remove Channel</string>
    <string name="test_block_channel">Test Blocking Channel</string>
    <string name="file_transfer">File Transfer</string>
    <string name="set_file_path">Set File Path</string>
    <string name="req_file">Request File</string>
    <string name="push_file">Push File</string>
    <string name="cancel_recv_file">Cancel Receiving File</string>
    <string name="cancel_send_file">Cancel Sending File</string>
    <string name="sns">Social Network Service</string>
    <string name="req_content_list">Request Content List</string>
    <string name="req_next_content_list">Request Next Content List</string>
    <string name="req_prev_content_list">Request Previous Content List</string>
    <string name="req_attach_file">Request Attached File</string>
    <string name="upload_content">Upload Content</string>
    <string name="user">User</string>
    <string name="reg_new_user">Register New User</string>
    <string name="dereg_user">Deregister User</string>
    <string name="find_reg_user">Find Registered User</string>
    <string name="add_new_friend">Add New Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="show_friends">Show Friends</string>
    <string name="show_friend_requesters">Show Friend Requesters</string>
    <string name="show_bi_friends">Show Bilateral Friends</string>
    <string name="other_cm_test">Other CM Test</string>
    <string name="test_forward_scheme">Test Forwarding Scheme</string>
    <string name="test_delay_forward_scheme">Test Delay of Forwarding Scheme</string>
    <string name="test_repeat_req_sns_content">Test Repeated Request of SNS Cotnent List</string>
    <string name="pull_push_multiple_files">Pull/Push Multiple Files</string>
    <string name="split_file">Split File</string>
    <string name="merge_files">Merge Files</string>
    <string name="dist_merge_files">Distribute and Merge File</string>
    <string name="app_name">CMClient</string>
    <string name="edit_command">Type \"0\" for all commands.</string>
    <string name="button_enter">Enter</string>
    <string name="textview_message">CM messages</string>
    <string name="server_address">Server IP address</string>
    <string name="server_port">Server port number</string>
    <string name="server_info_title">Server Information</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="login_ds_title">Login to default server</string>
    <string name="login_id">Login ID</string>
    <string name="login_passwd">Password</string>
    <string name="join_session_title">Join Session</string>
    <string name="session_name">Session Name</string>
    <string name="change_group_title">Change Group</string>
    <string name="group_name">Group Name</string>
    <string name="chat_title">Chatting</string>
    <string name="chat_target">Target User</string>
    <string name="chat_message">Message</string>
    <string name="chat_target_hint">/b, /s, /g, /username</string>
    <string name="channel_type_title">Channel Type</string>
    <string name="socket_channel">SocketChannel</string>
    <string name="datagram_channel">DatagramChannel</string>
    <string name="multicast_channel">MulticastChannel</string>
    <string name="add_socket_channel">add socket channel</string>
    <string name="block_channel">Blocking Channel</string>
    <string name="non_block_channel">Nonblocking Channel</string>
    <string name="sync_async_call">Synchronous / Asynchronous Call</string>
    <string name="sync_call">Synchronous Call</string>
    <string name="async_call">Asynchronous Call</string>
    <string name="ch_key_title"><![CDATA[Channel Key (> 0)]]></string>
    <string name="default_add_sock_ch_key">1</string>
    <string name="server_name_title">Server Name (empty for default server)</string>
    <string name="add_datagram_channel">add datagram channel</string>
    <string name="port_ch_key_title">Port number (key of datagram channel)</string>
    <string name="add_multicast_channel">add multicast channel</string>
    <string name="multicast_addr">Multicast Address</string>
    <string name="multicast_port">Multicast Port Number</string>
    <string name="remove_socket_channel">Remove Socket Channel</string>
    <string name="remove_datagram_channel">Remove Datagram Channel</string>
    <string name="remove_multicast_channel">Remove Multicast Channel</string>
    <string name="file_name">File Name</string>
    <string name="file_owner">File Owner</string>
    <string name="default_server_name">SERVER</string>
    <string name="file_append_mode">File Append Mode</string>
    <string name="default_mode">default</string>
    <string name="overwrite_mode">overwrite</string>
    <string name="append_mode">append</string>
    <string name="file_receiver">File Receiver</string>
    <string name="request_file">Request File</string>
    <string name="target_node">Target Node</string>
</resources>
