<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/socketChannelTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_socket_channel" />

    <RadioGroup
        android:id="@+id/sockChRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/blockChRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/block_channel" />

        <RadioButton
            android:id="@+id/nonBlockChRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/non_block_channel" />
    </RadioGroup>

    <TextView
        android:id="@+id/syncAsyncTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_async_call" />

    <RadioGroup
        android:id="@+id/syncAsyncRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/syncCallRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_call" />

        <RadioButton
            android:id="@+id/asyncCallRadioButton"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/async_call" />
    </RadioGroup>

    <TextView
        android:id="@+id/chKeyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ch_key_title" />

    <EditText
        android:id="@+id/chKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/default_add_sock_ch_key"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/serverNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_name_title" />

    <EditText
        android:id="@+id/serverNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddSocketChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onConfirmAddSocketChannel"
            android:text="@string/button_confirm" />

        <Button
            android:id="@+id/buttonCancelAddSocketChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancelAddSocketChannel"
            android:text="@string/button_cancel" />
    </LinearLayout>
</LinearLayout>
