<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mulicastChTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_multicast_channel" />

    <TextView
        android:id="@+id/sessionNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_name" />

    <EditText
        android:id="@+id/sessionNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/groupNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name" />

    <EditText
        android:id="@+id/groupNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/multicastAddrTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multicast_addr" />

    <EditText
        android:id="@+id/multicastAddrEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/multicastPortTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multicast_port" />

    <EditText
        android:id="@+id/multicastPortEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddMulticastChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onConfirmAddMulticastChannel"
            android:text="@string/button_confirm" />

        <Button
            android:id="@+id/buttonCancelAddMulticastChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancelAddMulticastChannel"
            android:text="@string/button_cancel" />
    </LinearLayout>
</LinearLayout>
