<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chatTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_title" />

    <TextView
        android:id="@+id/chatTargetTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_target" />

    <EditText
        android:id="@+id/chatTargetEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/chat_target_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/chatMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_message" />

    <EditText
        android:id="@+id/chatMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />
</LinearLayout>
